<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_a_method"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/phone_number"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="555555555"
        app:layout_constraintTop_toBottomOf="@id/tvChoose" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAccountNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/account_number"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="GE00BG00000000000000000"
        app:layout_constraintTop_toBottomOf="@id/etPhone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etIdNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/id_number"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="20000000000"
        app:layout_constraintTop_toBottomOf="@id/etAccountNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChoose"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etIdNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>